[Autofill] Rationalize phone number field by sections instead of by forms.

This change will change the autofill phone number rationalization to group
fields in a form into sections first, then call the rationalization logic
once per each sections.

This will allow autofill of multiple phone numbers as long as they are in
different sections(typically: billing vs shipping).

Related change: Ia7084e63cadf676fba4af72fadcec73880be5579
Bug: 779585
Change-Id: I0224ea355836798537195852ddc44634ba813f89